# gridlang

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  test.yml
docs/: app.js  editor.html  index.html
examples/: 01_hello.grid  02_sales_report.grid  03_financial_model.grid  04_dashboard.grid  05_multi_sheet.grid  06_pivot_charts.grid  07_chart_dsl.grid  08_remote_data.grid  09_reactive.grid  10_javascript.grid  11_js_extreme.grid  12_collab.grid  imported_from_excel.grid  sample_input.xlsx
examples/fixtures/: q1_sales.json
gridlang/: __init__.py  bindings.py  chart_dsl.py  charts.py  cli.py  collab.py  collab_client.py  crdt.py  csv_io.py  data_sources.py  excel_export.py  excel_import.py  formulas.py  js_bundle.py  js_runtime.py  parser.py  renderer.py  runtime.py  schema.py  server.py
gridlang/js/: bridge_node.js  df_helpers.js  runtime_pipeline.js
spec/: SPEC.md
tests/: _run_no_pytest.py  test_bindings.py  test_chart_dsl.py  test_charts.py  test_cli_validate.py  test_collab.py  test_crdt.py  test_data_sources.py  test_formulas.py  test_io.py  test_js_bundle.py  test_js_runtime.py  test_parser.py  test_renderer.py  test_runtime.py
