[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridlang"
version = "1.0.0"
description = "AI-native spreadsheet file format: data + compute + presentation in one file"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
gridlang = "gridlang.cli:main"

[tool.setuptools.packages.find]
include = ["gridlang*"]

[tool.setuptools.package-data]
gridlang = ["js/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
